# plasmoid-razer-battery

./: .clang-format  .clang-tidy  .clangd  .qmlls.ini  AGENTS.md  CMakeLists.txt  Makefile  README.md  run.sh
package/: metadata.json  mouse_battery.py
package/contents/ui/: main.qml
plugin/: CMakeLists.txt  plugins.qmltypes  qmldir  razerbattery.cpp  razerbattery.h  razerplugin.cpp  razerplugin.h
